--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,9 @@ package-lock.json
 yarn.lock
 pnpm-lock.yaml
 .vercel
-private
-private.*
-private-*
-past.*
-past-*
-scripts/run.ts
 *.bike
+*.db
+.repo_ignore
+x/
+x-*
+past-*
